[tool.poetry]
name = "activitytracker"
version = "0.1.0"
description = ""
authors = ["Екатерина Ложенко <ea_lozhenko@controlsystems.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.11"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
